# contrib-ipgp

apps/: CMakeLists.txt
apps/wo2sc/: CMakeLists.txt  main.cpp  wo2sc.cpp  wo2sc.h
apps/wo2sc/config/: wo2sc.cfg
apps/wo2sc/descriptions/: wo2sc.rst  wo2sc.xml
