SET(WO2SC_TARGET wo2sc)

INCLUDE_DIRECTORIES(${LIBXML2_INCLUDE_DIR}) 

SET(
	WO2SC_SOURCES
		main.cpp
		wo2sc.cpp
)

SET(
	WO2SC_HEADERS
		wo2sc.h
)

INCLUDE_DIRECTORIES(.)

SC_ADD_EXECUTABLE(WO2SC ${WO2SC_TARGET})
SC_LINK_LIBRARIES_INTERNAL(${WO2SC_TARGET} client)

SC_INSTALL_INIT(${WO2SC_TARGET} ${INIT_TEMPLATE})

FILE(GLOB descs "${CMAKE_CURRENT_SOURCE_DIR}/descriptions/*.xml")
INSTALL(FILES ${descs} DESTINATION ${SC3_PACKAGE_APP_DESC_DIR})
